--- a/project.swan.json
+++ b/project.swan.json
@@ -7,7 +7,7 @@
     },
     "host": "baiduboxapp",
     "preview": {
-        "packageId": 974956
+        "packageId": 993306
     },
     "projectname": "program",
     "setting": {
@@ -15,8 +15,8 @@
     },
     "swan": {
         "baiduboxapp": {
-            "extensionJsVersion": "100.14.255",
-            "swanJsVersion": "3.190.255-rc"
+            "swanJsVersion": "3.190.255-rc",
+            "extensionJsVersion": "100.14.255"
         }
     }
 }
