--- a/project.swan.json
+++ b/project.swan.json
@@ -1,5 +1,5 @@
 {
-    "appid": "17767960",
+    "appid": "22981842",
     "compilation-args": {
         "common": {
             "enhance": true
@@ -7,16 +7,19 @@
     },
     "host": "baiduboxapp",
     "preview": {
-        "packageId": 993306
+        "packageId": 950128
     },
     "projectname": "program",
+    "publish": {
+        "version": "1.0.1"
+    },
     "setting": {
         "urlCheck": false
     },
     "swan": {
         "baiduboxapp": {
-            "swanJsVersion": "3.190.255-rc",
-            "extensionJsVersion": "100.14.255"
+            "extensionJsVersion": "100.14.255",
+            "swanJsVersion": "3.190.255-rc"
         }
     }
 }
